--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.audio-recorder {
+    background-color: transparent !important;
+    box-shadow: none !important;
+    border-radius: 20px;
+    width: auto !important;
+    padding: 0 !important;
+    transition: all .2s ease-in;
+}
