--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,9 @@
 .EmojiPickerReact .Flex {
     display: none !important;
 }
+.react-scroll-to-bottom--css-lplkk-1tj0vk3{
+    right: 50% !important;
+    background: #11175D !important;
+    clip-path: polygon(24% 0, 75% 0, 76% 44%, 100% 45%, 50% 100%, 2% 44%, 24% 44%);
+    -webkit-clip-path: polygon(24% 0, 75% 0, 76% 44%, 100% 45%, 50% 100%, 2% 44%, 24% 44%);
+}
